// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders Chelsea Lowered modal 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Chelsea St Bridge Lowered
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        OCC reported that the Chelsea St Bridge has been lowered.
      </div>
    </div>
  </div>,
]
`;

exports[`Modal renders Chelsea Raised modal 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Chelsea St Bridge Raised
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        OCC reported that the Chelsea St Bridge will be raised until 7:45 AM.
      </div>
    </div>
  </div>,
]
`;

exports[`Modal renders inactive notification modal when appropriate 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Sorry, there's no additional information that we can provide you about this notification.
      </div>
    </div>
  </div>,
]
`;

exports[`Modal renders loading modal when appropriate 1`] = `
[
  <div
    className="c-modal c-notification-loading-modal"
  >
    <div
      className="c-notification-loading-modal__spinner-wrapper"
    >
      <span
        className="c-loading-spinner"
        dangerouslySetInnerHTML={
          {
            "__html": "<svg/>",
          }
        }
      />
    </div>
    <div
      className="c-notification-loading-modal__text-wrapper"
    >
      Loading...
    </div>
  </div>,
  <div
    aria-hidden={true}
    className="c-modal-backdrop"
  />,
]
`;
